static/main.css
/* ... */
search {
	font-family: 'Titillium Web', sans-serif;
	background: #333;
	height: 45px;
	border-radius: 4px 4px 0 0;
	border: 1px gray solid;
	border-bottom: 0px;
	padding: 4px ;
	display: flex;
	justify-content: space-around;
}

actionable {
	border: 1px gray solid;
	border-bottom: #7a003f solid 2px;
	border-radius: 0 0 4px 4px;
	display: block;
	margin-bottom: 20px;
	min-height: 50px;
	padding: 14px;
	row  {
		> div {
			display: flex;
			justify-content: space-between;
			.muted {
				margin: 0 3px 0 0 ;
				display: inline-block;
				width: 2em;
			}
		}
		border: none;
		border-bottom: #808080 solid 1px;
		color: rgb(255, 255, 235);
		display: block;
		margin-bottom: 15px;
		text-align: left;
		desc {
			display: block;
		}

	}
}

.upstream {
	color: #bbb;
	display: block;
	font-family: 'Titillium Web', sans-serif;
	font-size: 90%;
	margin: 6px 0 0;
}

li {
	display: block;
	list-style: none;
}
commit {
	display: block;
	text-align: left;
	padding: 0;
	margin-bottom: 20px;
	background: #333;
	border-radius: 3px 3px 0 0;
	> data {
		display: block;
		padding: 8px;
		background: #333;
		border-radius: 3px 3px 0 0;
	}
	> top, > foot {
		text-align: left;
		display: block;
		background-color: #686868;
		padding: 8px;
		> span {
			display: inline-block;
			float: right;
		}
	}
	> top {
		border-radius: 3px 3px 0 0;
		border-top: #7a003f solid 2px;
	}
	> foot {
		border-bottom: #7a003f solid 2px;
		border-radius: 0 0 3px 3px;
	}
}

textarea.paste {
	width: 100%;
	min-height: 20em;
}

delta.issue {
	display: flex;
	justify-content: space-between;
	margin-bottom: 1em;


	issue {
		width: 48%;
		name {
			background: #333;
			border-radius: 3px 3px 0 0;
			border: 1px gray solid;
			border-bottom: 0px;
			display: flex;
			justify-content: space-between;
			height: 1.5em;
			padding: 4px 12px;
		}
		desc {
			border: 1px solid gray;
			display: block;
			padding: 8px;
		}
	}
	comments {
		width: 48%;
	}
}

.new {
	background: white;
	color: black;
	border-radius: 100%;
	padding: 1.1px 3.3px;

}

gist {
	white-space: pre;
}

patch, gist {
	margin: 2rem 0 10rem;
	border-radius: 4px 4px 0 0;
	padding: 8px;

	header {
		border-radius: 3px 3px 0 0;
		border-top: 1px solid #780000;
		border-left: 1px solid #737373;
		border-bottom: 1px solid black;
		border-right: 1px solid #888;
		background-color: #686868;
		padding: 8px 4px;
		width: auto;
	}

	changes {
		font-family: "Ubuntu Mono", monospace, sans-serif;
		font-size: 0.8em;
		border-top: 0px;
		border-bottom: 2px #555 solid;
		border-left: 1px solid #888;
		border-right: 1px solid #666;
		display: block;
		text-align: left;
		background: #333;
		span {
			white-space: pre;
			&.split {
				white-space: pre;
				width: fit-content;
				margin: 0;
				display: inline-block;
				span {
					margin: 0;
					width: fit-content;
					display: inline-block;
					overflow: scroll;
				}
			}
			&.del { background: #5b0000 }
			&.add { background: #003e00 }
			:first-child {
				margin: 0;
			}
			.block {
				&:first-child {
					margin-top: 0;
				}
				border-top: 1px solid #999;
				border-bottom: 2px solid #222;
				background: #569;
				/* background: #4a4a91; might want to revert to this color */
				display: block;
				width: auto;
				margin: 8px auto;
				padding: 8px;
			}
		}
	}
	.buttons {
		background: #333;
		border: 1px gray solid;
		border-top: 0px;
		display: block;
		height: 25px;
		padding: 4px 0 4px 12px;
	}

	.del { background: #633 }
	.add { background: #353 }
}

patchrequest {
	border: 1px solid gray;
	display: block;
	border-radius: 4px 4px 0 0;
	form {
		padding: 1em;
		width: 80%;
	}
	input, textarea {
		display: block;
		margin: 0 0 1em;
		width: 100%;
		background: #333;
		border: 1px solid gray;
		border-radius: 2px;
		font-size: 130%;
	}
	textarea { height: 10em }
	intro {
		border-radius: 4px 4px 0 0;
		padding: 10px;
		background: #333;
		display: flex;
		justify-content: space-between;
		align-items: baseline;
		text-align: left;
	}
}

diff {
	text-align: left;
	display: block;
	margin-bottom: 1em;

	filename {
		background: #333;
		border-radius: 3px 3px 0 0;
		border: 1px gray solid;
		border-bottom: 0px;
		display: flex;
		justify-content: space-between;
		height: 1.5em;
		padding: 4px 12px;
	}
}

form.pretty {
	display: flex;
	flex-direction: column;
	gap: 1em;
	border: 1px solid gray;
	border-bottom-color: gray;
	border-bottom: 0;
	padding-bottom: 1em;
	context {
		font-family: 'Titillium Web', sans-serif;
		background: #333;
		display: block;
		height: 35px;
		padding: 4px 0 4px 12px;
	}
	input, textarea, select {
		margin: 0 0.5em;
		flex-grow: 1;
		background: #333;
		display: inline-block;
		border: 1px solid gray;
		border-radius: 0;
		font-size: 130%;
		padding: 4px;
	}
	input, textarea {
		border-bottom: 0px solid gray;
		&:last-of-type {
			border-bottom: 1px solid gray;
		}
	}
	button {
		margin: 0 0.5em;
	}
	textarea { height: 10em }
}

input, textarea {
	padding: 10px;
	background: #222;
	border: 1px solid gray;
	border-radius: 2px;
	font-size: 120%;
}

comment {
	text-align: left;
	display: block;
	margin-bottom: 1em;
	/* max-width: 45em; */

	context {
		background: #333;
		border-radius: 3px 3px 0 0;
		border-top: 1px solid #737373;
		border-left: 1px solid #737373;
		border-bottom: 1px black solid;
		border-right: 1px #444 solid;
		display: flex;
		justify-content: space-between;
		height: 1.5em;
		padding: 4px 12px;
	}
	message {
		border-top: 1px solid #737373;
		border-left: 1px solid #737373;
		border-bottom: 1px #444 solid;
		border-right: 1px #444 solid;
		display: block;
		padding: 8px;
		overflow: auto
	}
	input, textarea {
		display: block;
		margin: 0 0 1em;
		width: 100%;
		background: #333;
		border: 1px solid gray;
		border-radius: 2px;
		font-size: 130%;
	}
	textarea { height: 10em }
	.buttons {
		background: #333;
		border: 1px gray solid;
		border-top: 0px;
		display: block;
		height: 25px;
		padding: 4px 0 4px 12px;
	}
	.muted.reply {
		text-align: right;
		float: right;
	}
}
/* ... */

